# cloudhome

./: .gitignore  Cargo.toml  README.md  default.nix  setup.py
cloudhome/: cloud.py  cloudhome.py  config.py  local.py  log_rotation.py  main.py  state.py  storage.py  sync.py
src/: cloud.rs  config.rs  local.rs  main.rs  manifest.rs  state.rs
src-rust/: cloud.rs  manifest.rs
