[package]
name = "cloudhome"
version = "0.1.0"
authors = ["Jordan McQueen <jordan@whoami.sh>"]
edition = "2018"

[dependencies]
notify = "~4"
rusoto_core = "0.36.0"
rusoto_s3 = "0.36.0"
serde = "~1"
serde_json = "~1"
serde_derive = "~1"
shellexpand = "~1"
futures = "~0.1"
rust-crypto = "^0.2"
chrono = "~0.4"